# titanium

./: .gitignore  Cargo.toml  README.md  _build.rs  linker.ld  rustfmt.toml
kernel/: Cargo.toml  build.rs  debug.gdb
kernel/.cargo/: config.toml
kernel/src/: asm.rs  lib.rs  main.rs  multitasking.rs  testing.rs  time.rs
kernel/src/drivers/: ahci.rs  blockdevice.rs  keyboard.rs  macros.rs  mod.rs  mouse.rs  pic.rs  pit.rs  port.rs  serial.rs  vga.rs
kernel/src/filesystem/: mod.rs
kernel/src/graphics/: mod.rs
kernel/src/interrupts/: asm.rs  gdt.rs  handlers.rs  idt.rs  mod.rs
kernel/src/memory/: mod.rs  region_frame_allocator.rs
kernel/src/multiboot/: memory_map.rs  mod.rs
kernel/src/multitasking/: mod.rs  scheduler.rs  thread.rs
kernel/src/shell/: clock.rs  mod.rs  vga_buffer.rs  vga_text_buffer.rs
kernel/src/syscalls/: ffi.rs  mod.rs
kernel/tests/: divide_by_zero.rs  exception_handlers.rs  kernel_stack_overflow.rs  page_fault.rs  tests.toml
src/: allocator.rs  (+6 more)
titanium/: Cargo.toml  build.rs
titanium/src/: asm.rs  asm_wrappers.rs  drivers.rs  gdt.rs  interrupt.rs  kernel_main.rs  lib.rs  loader.s  main.rs  memory.rs  multiboot.rs  multitasking.rs  pci.rs  serial.rs  vga_buffer.rs
titanium/src/allocator/: linked_list.rs  mod.rs
titanium/src/drivers/: mod.rs  mouse.rs  serial.rs
titanium/src/interrupts/: asm.rs  gdt.rs  idt.rs  mod.rs
titanium/src/memory/: mod.rs  region_frame_allocator.rs
titanium/src/multiboot/: elf.rs  memory_map.rs  mod.rs
titanium/src/pci/: mod.rs  vendors.rs
titanium/src/shell/: vga_buffer.rs
toolchain/: Cargo.toml  grub.cfg
toolchain/binutils-2.37/: config.sub
toolchain/binutils-2.37/bfd/: config.bfd
toolchain/binutils-2.37/gas/: configure.tgt
toolchain/binutils-2.37/ld/: Makefile.am  Makefile.in  aclocal.m4  configure.tgt
toolchain/gcc-11.1.0/: config.sub
toolchain/gcc-11.1.0/fixincludes/: mkfixinc.sh
toolchain/gcc-11.1.0/gcc/: config.gcc
toolchain/python-utils/: conv.py
toolchain/src/: debug.rs  image.rs  lib.rs
(+76 files in other folders)
