[package]
name = "titanium"
version = "0.1.0"
edition = "2018"
build = "build.rs"
authors =  ["christian.kuhl84@gmail.com"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "kernel"

[[bin]]
name = "titanium"

[features]
qemu_test = []
qemu_test_should_panic = []

[dependencies]
volatile = "0.2.6"
spin = "0.9.2"
uart_16550 = "0.2.0"
pc-keyboard = "0.5.0"
elf = { path = "../userland/libraries/elf" }

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }